kubernetes/order-service/order-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment 
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order-service
          image: ghcr.io/jaygung17/order-service:latest
          ports:
            - containerPort: 3000
