kubernetes/order-service/order-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order
spec:
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 3000
  type: NodePort
