kubernetes/order-service/order-gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: order-gateway 
spec:
  selector:
    istio: ingressgateway  
  servers:
  - port:
      number: 80  
      name: http
      protocol: HTTP
    hosts:
    - "*"  

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: order  
spec:
  hosts:
  - "*" 
  gateways:
  - order-gateway  
  http:
  - match:
    - uri:
        exact: /order  
    route:
    - destination:
        host: order-service.default.svc.cluster.local  
        port:
          number: 3000
